# mortgage-filter-package

./: .coverage  .gitignore  Demo.html  Demo.ipynb  README.md  TEST_SUITE.py  Test_Suite.py  Test_base.py  Test_filter.py  setup.cfg  setup.py
.github/workflows/: CI_test_workflow.yml
Mortgage_Package/: mortgage_filter.py
Mortgage_Package.egg-info/: PKG-INFO  SOURCES.txt
Test_Scripts/: Test_base.py  Test_filter.py
demo/: Demo.html  Demo.ipynb  Demo.md
docs/source/: conf.py
mortgage_filter/: __init__.py
mortgage_filter/mortgage_filter_lukavuko.egg-info/: PKG-INFO
mortgage_filter_lukavuko.egg-info/: PKG-INFO  SOURCES.txt
mortgage_package/mortgage_filter_lukavuko.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_base.py  test_filter.py
