[metadata]
name = mortgage-filter-lukavuko
version = 0.3
author = Luka Vukovic
author_email = luka.vuko@outlook.com
description = A package for filtering real estate opportunities based on your financial situation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukavuko/mortgage-filter-package
project_urls =
    Bug Tracker = https://github.com/lukavuko/mortgage-filter-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mortgage_package
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mortgage_package